Refactored logo to respective folder. Changed FiddleListing styles a bit (fixed overflow padding and shadows)

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -50,7 +50,7 @@
 
 /* Logo */
 .header__logo {
-	background-image: url(../../assets/logo.png);
+	background-image: url(./logo.png);
 	background-size: 214px 62px;
 	width: 214px;
 	height: 31px;
@@ -98,7 +98,7 @@
 	content: '';
 	width: 100%;
 	height: 100%;
-	background-image: url(../../assets/logo.png);
+	background-image: url(./logo.png);
 	background-size: 214px 62px;
 	background-position: 0 -31px;
 	position: absolute;
