--- a/src/components/Landing/FiddleListing/FiddleListing.css
+++ b/src/components/Landing/FiddleListing/FiddleListing.css
@@ -1,27 +1,39 @@
 .fiddle-listing {
-	margin: 0 40px;
+	padding: 0 40px;
 	margin-top: 40px;
 	padding-bottom: 16px;
 	display: flex;
 	overflow-x: auto;
 	justify-content: space-between;
 	align-items: stretch;
-	filter: drop-shadow(0px 2px 3px rgba(0,0,0,0.15));
 }
 
+.fiddle-listing__fiddle::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: -1;
+	border-radius: 3px;
+	box-shadow: 0px 3px 7px rgba(0,0,0,.15);
+}
 .fiddle-listing__fiddle {
-	flex: 0 0 360px;
+	position: relative;
+	z-index: 1;
+	flex: 0 0 auto;
 	display: flex;
 	flex-direction: column;
-	background: white;
-	/*box-shadow: 0 2px 12px rgba(0,0,0,.15);*/
+	background: transparent;
 	border-radius: 3px;
-	overflow: hidden;
-	min-height: 15vw;
+	border-right: 40px solid transparent;
+	box-sizing: content-box;
+	width: 20vw;
+	height: 20vw;
 	color: inherit;
 	text-decoration: none;
 }
-.fiddle-listing__fiddle:not(:last-child) {margin-right: 40px;}
 
 .fiddle-listing__fiddle__image {
 	flex: 1 1 auto;
@@ -29,10 +41,14 @@
 	background-repeat: no-repeat;
 	background-size: 100% auto;
 	background-color: var(--editor-bg);
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
 }
 .fiddle-listing__fiddle__content {
 	flex: 0 0 auto;
 	padding: 16px;
+	border-radius: 3px;
+	overflow: hidden;
 }
 .fiddle-listing__fiddle__title { font-size: 1.5em; color: var(--medium-2); }
 .fiddle-listing__fiddle__author { font-family: 'Roboto Mono'; color: var(--light); }
